1999-08-04  Scott Stanton  <stanton@scriptics.com>

	* tests/reg.test: Added test for REG_EXPECT bug fixed by Henry's
	patch.

	* generic/regc_nfa.c: 
	* generic/regcomp.c: 
	* generic/rege_dfa.c:
	* generic/regexec.c: 
	* generic/regguts.h: Applied patches supplied by Henry Spencer to
	greatly enhance the performance of certain classes of regular
	expressions. [Bug: 2440, 2447]

1999-08-03  Scott Redman  <redman@scriptics.com>

	* win/tclWinInt.h: Remove function declarations in header that was
	moved to tclInt.decls file in previous changes.

1999-08-02  Scott Redman  <redman@scriptics.com>

	* unix/configure.in:
	* win/configure.in: Change beta level to b2.
	
	* generic/tcl.h:
	* generic/tcl.decls:
	* generic/tclDecls.h:
	* generic/tclInt.h:
	* generic/tclInt.decls:
	* generic/tclIntDecls.h:
	* generic/tclRegexp.h:
	* generic/tclStubInit.c: Move some exported public and internal
	functions to the stub tables.  Removed functions that are in the
	stub tables (from this and previous changes) from the original
	header files.

1999-08-01  Scott Redman  <redman@scriptics.com>

	* win/tclWinSock.c: Added comment block to SocketThread()
	function.  Added code to avoid calling TerminateThread(), but
	instead to send a message to the socket event window to tell it to
	terminate its thread.

1999-07-30  Jeff Hobbs  <hobbs@scriptics.com>

	* generic/tclInt.decls: added declaractions necessary for the
	Tcl test code to work wth stubs [Bug: 2445]

1999-07-30    <redman@scriptics.com>

	* win/tclWinPipe.c:
	* win/Makefile.in: Fixing launching of 16-bit apps on Win9x from
	wish.  The command line was primed with tclpip82.dll, but it was
	ignored.  Fixed that, then fixed the gmake makefile to build
	tclpip82.dll as an executable.

	* win/tclWinSock.c: Applied small patch to get thread-specific
	data after initializing the socket driver.

	* unix/tclUnixThrd.c: Applied patch to fix threads on Irix 6.5.
	Patch from James Dennett.  [Bug: 2450]
