@@ -219,20 +219,20 @@ command.
 .TP
 \fBtcl_pkgPath\fR
 This variable holds a list of directories indicating where packages are
-normally installed.  It typically contains either one or two entries; 
-if it contains two entries, the first is normally a directory for
-platform-dependent packages (e.g., shared library binaries) and the
-second is normally a directory for platform-independent packages (e.g.,
-script files). Typically a package is installed as a subdirectory of one
-of the entries in \fB$tcl_pkgPath\fR. The directories in
-\fB$tcl_pkgPath\fR are included by default in the \fBauto_path\fR
+normally installed.  It is not used on Windows.  It typically contains
+either one or two entries; if it contains two entries, the first is
+normally a directory for platform-dependent packages (e.g., shared library
+binaries) and the second is normally a directory for platform-independent
+packages (e.g., script files). Typically a package is installed as a
+subdirectory of one of the entries in \fB$tcl_pkgPath\fR. The directories
+in \fB$tcl_pkgPath\fR are included by default in the \fBauto_path\fR
 variable, so they and their immediate subdirectories are automatically
 searched for packages during \fBpackage require\fR commands.  Note:
-\fBtcl_pkgPath\fR it not intended to be modified by the application.
-Its value is added to \fBauto_path\fR at startup; changes to
-\fBtcl_pkgPath\fR are not reflected in \fBauto_path\fR.  If you
-want Tcl to search additional directories for packages you should add
-the names of those directories to \fBauto_path\fR, not \fBtcl_pkgPath\fR.
+\fBtcl_pkgPath\fR it not intended to be modified by the application.  Its
+value is added to \fBauto_path\fR at startup; changes to \fBtcl_pkgPath\fR
+are not reflected in \fBauto_path\fR.  If you want Tcl to search additional
+directories for packages you should add the names of those directories to
+\fBauto_path\fR, not \fBtcl_pkgPath\fR.
 .VE
 .TP
 \fBtcl_platform\fR
